--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
       </h1>
     </div>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script
+    <!-- <script src="https://unpkg.com/react@18/umd/react.development.js"></script> -->
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
+    ></script> -->
     <script src="./App.js"></script>
   </body>
 </html>
