--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <div id="root">
-      <h1>
-        hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
-      </h1>
+      <h1>Not Rendered</h1>
     </div>
     <!-- <script src="https://unpkg.com/react@18/umd/react.development.js"></script> -->
     <!-- <script
