--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script> -->
-    <script type="module" src="./src/App.js"></script>
+    <script type="module" src="./src/FoodDelivery.js"></script>
   </body>
 </html>
